--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,16 @@
   
   body {
     margin: 0;
-    background-color: var(--xiketic-2);
-    color: #ffffff;
+    background-color: #412234;
+    color: #fafafa;
+    
   }
   
   .banner {
     text-align: center;
     padding: 2rem 1rem;
     margin-bottom: 20px;
-    background-color: var(--tyrian-purple);
+    background-color: #B49FCC;
   }
   
   .title {
